tests/positive/exceptions/clone_builtin_exception/input.ci
void main() {
    RuntimeException e = clone RuntimeException;
    e.message = "custom runtime error";
    try {
        throw e;
    } catch (RuntimeException e) {
        print("caught: " + e.message + "\n");
    }
    print("done\n");
}
