tests/negative/semantic/wrong_arg_count_fileexists/input.ci
void main() {
    print(toString(fileExists()) + "\n");
}
